--- a/index.html
+++ b/index.html
@@ -216,15 +216,31 @@
     <section>
       <div class="second__container">
         <div class="row">
-            <div class="quality__header--section">
-              <span class="quality__header">QUALITY WORK</span>
-              <span class="quality__subheader">Designed & Developed by <span class="text__purple">Professionals.</span></span>
-              <span class="quality__para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem, accusamus itaque ipsa quam, in voluptates iusto sequi, vero ducimus nisi voluptatum sed eius ratione. Et numquam non cupiditate quod repellat!</span>
-              <button class="quality__button">Learn More</button>   
-                <figure class="img__wrapper">
-                  <img class="quality__img" src="https://treact.owaiskhan.me/static/media/hero-screenshot-1.40a097b525c2f8c9808e.png" alt="">
-                </figure>
-          </div>     
+          <div class="quality__header--section">
+            <div class="text__wrapper">
+              <h1 class="quality__header">QUALITY WORK</h1>
+              <h2 class="quality__subheader">
+                Designed & Developed by
+                <span class="text__purple">Professionals.</span>
+              </h2>
+              <p class="quality__para">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Dolorem, accusamus itaque ipsa quam, in voluptates iusto sequi,
+                vero ducimus nisi voluptatum sed eius ratione. Et numquam non
+                cupiditate quod repellat!
+              </p>
+              <button class="quality__button">Learn More</button>
+            </div>
+            <div class="img__wrapper">
+              <figure>
+                <img
+                  class="quality__img"
+                  src="https://treact.owaiskhan.me/static/media/hero-screenshot-1.40a097b525c2f8c9808e.png"
+                  alt=""
+                />
+              </figure>
+            </div>
+          </div>
         </div>
       </div>
     </section>
