--- a/index.html
+++ b/index.html
@@ -215,34 +215,68 @@
 
     <section>
       <div class="second__container">
-        <div class="row">
+        <div class="quality__row">
           <div class="quality__header--section">
-            <div class="text__wrapper">
-              <h1 class="quality__header">QUALITY WORK</h1>
-              <h2 class="quality__subheader">
-                Designed & Developed by
-                <span class="text__purple">Professionals.</span>
-              </h2>
-              <p class="quality__para">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Dolorem, accusamus itaque ipsa quam, in voluptates iusto sequi,
-                vero ducimus nisi voluptatum sed eius ratione. Et numquam non
-                cupiditate quod repellat!
-              </p>
-              <button class="quality__button">Learn More</button>
-            </div>
-            <div class="img__wrapper">
-              <figure>
-                <img
-                  class="quality__img"
-                  src="https://treact.owaiskhan.me/static/media/hero-screenshot-1.40a097b525c2f8c9808e.png"
-                  alt=""
-                />
-              </figure>
-            </div>
+            <span class="quality__header">QUALITY WORK</span>
+            <h2 class="quality__subheader">
+              Designed & Developed by
+              <span class="text__purple">Professionals.</span>
+            </h2>
+            <p class="quality__para">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem,
+              accusamus itaque ipsa quam, in voluptates iusto sequi, vero
+              ducimus nisi voluptatum sed eius ratione. Et numquam non
+              cupiditate quod repellat!
+            </p>
+            <button class="quality__button">Learn More</button>
+          </div>
+          <div class="img__wrapper">
+            <img
+              class="quality__img"
+              src="https://treact.owaiskhan.me/static/media/hero-screenshot-1.40a097b525c2f8c9808e.png"
+              alt=""
+            />
           </div>
         </div>
       </div>
     </section>
+
+    <section>
+      <div class="row">
+      <div class="steps__section">
+          <div>
+            <img class="steps__img" src="https://treact.owaiskhan.me/static/media/hero-screenshot-2.241aac1fbc66db29d873.png" alt="">
+          </div>
+          <div class="steps__list">
+            <h5 class="steps__header">STEPS</h5>
+            <h2 class="steps__subheader">Easy to <span class="text__purple">Get Started.</span></h2>
+            <ul class="lists__wrapper">
+              <li class="lists">
+                <div class="list__numbers">01</div>
+                <div>
+                  <h6 class="list__header">Register</h6>
+                  <p class="list__para">Create an account with us using Google or Facebook.</p>
+                </div>
+              </li>
+              <li class="lists">
+                <div class="list__numbers">02</div>
+                <div>
+                  <h6 class="list__header">Download</h6>
+                  <p class="list__para">Browse and Download the template that you like from the marketplace.</p>
+                </div>
+              </li>
+              <li class="lists">
+                <div class="list__numbers">03</div>
+                <div>
+                  <h6 class="list__header">Run</h6>
+                  <p class="list__para">Follow the instructions to setup and customize the template to your needs.</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </body>
 </html>
