--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
     <section>
       <div class="row">
-      <div class="steps__section">
+       <div class="steps__section">
           <div>
             <img class="steps__img" src="https://treact.owaiskhan.me/static/media/hero-screenshot-2.241aac1fbc66db29d873.png" alt="">
           </div>
@@ -275,6 +275,20 @@
             </ul>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="row">
+       <div class="pricing__section">
+        <div>
+          <h1 class="pricing__header">PRICING</h1>
+          <h2 class="pricing__subhead">Reasonable & Flexible <span class="text__purple">Plans.</span></h2>
+          <p class="pricing__para">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique atque vero quos illo assumenda consequuntur mollitia reiciendis illum totam harum?
+          </p>
+        </div>
+       </div>
       </div>
     </section>
 
