--- a/index.html
+++ b/index.html
@@ -288,6 +288,28 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique atque vero quos illo assumenda consequuntur mollitia reiciendis illum totam harum?
           </p>
         </div>
+        <div class="threeplans__container">
+          <div class="personal__plan">
+            <div class="plan__highlight"></div>
+            <div class="threeplans__header">
+              <span class="name">Personal</span>
+              <span class="price">$17.99</span>
+              <span class="duration">Monthly</span>
+            </div>
+            <div class="threeplans__features">
+              <span class="feature__mainfeature">For Individuals</span>
+              <span class="feature">30 Templates</span>
+              <span class="feature">7 Landing Pages</span>
+              <span class="feature">12 Internal Pages</span>
+              <span class="feature">Basic Assistance</span>
+            </div>
+            <div class="threeplans__action">
+               <button class="plans__button">BUY NOW</button>
+            </div>
+          </div>
+          <div class="business__plan"></div>
+          <div class="enterprise__plan"></div>
+        </div>
        </div>
       </div>
     </section>
