--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
       <div class="row">
        <div class="steps__section">
           <div>
-            <img class="steps__img" src="https://treact.owaiskhan.me/static/media/hero-screenshot-2.241aac1fbc66db29d873.png" alt="">
+            <img class="steps__img" src="https://cutzudev.github.io/treact_example/assets/hero-screenshot-2.241aac1fbc66db29d873.png"" alt="">
           </div>
           <div class="steps__list">
             <h5 class="steps__header">STEPS</h5>
@@ -289,7 +289,7 @@
           </p>
         </div>
         <div class="threeplans__container">
-          <div class="personal__plan">
+          <div class="plans">
             <div class="plan__highlight"></div>
             <div class="threeplans__header">
               <span class="name">Personal</span>
@@ -307,9 +307,65 @@
                <button class="plans__button">BUY NOW</button>
             </div>
         </div>
+          <div id="blue__plans" class="plans">
+            <div class="threeplans__header">
+              <span class="name blue_plan_text ">Business</span>
+              <span class="price blue_plan_text ">$37.99</span>
+              <span class="duration blue_plan_text ">Monthly</span>
+            </div>
+            <div class="threeplans__features" id="blue_border" >
+              <span class="feature__mainfeature">For Small Businesses</span>
+              <span class="feature blue_plan_text ">60 Templates</span>
+              <span class="feature blue_plan_text ">15 Landing Pages</span>
+              <span class="feature blue_plan_text ">22 Internal Pages</span>
+              <span class="feature blue_plan_text ">Priority Assistance</span>
+            </div>
+            <div class="threeplans__action">
+               <button id="blue_plan_button" class="plans__button">BUY NOW</button>
+            </div>
+        </div>
+          <div class="plans">
+            <div class="plan__highlight" id="red_highlight" ></div>
+            <div class="threeplans__header">
+              <span class="name">Enterprise</span>
+              <span class="price">$57.99</span>
+              <span class="duration">Monthly</span>
+            </div>
+            <div class="threeplans__features">
+              <span class="feature__mainfeature">For Large Companies</span>
+              <span class="feature">90 Templates</span>
+              <span class="feature">27 Landing Pages</span>
+              <span class="feature">37 Internal Pages</span>
+              <span class="feature">Personal Assistance</span>
+            </div>
+            <div class="threeplans__action">
+               <button class="plans__button" id="red_button" >BUY NOW</button>
+            </div>
+        </div>
        </div>
       </div>
     </section>
     
+    <section>
+      <div class="row">
+        <div class="testimonials__section">
+          <div class="testimonials__img">
+            <img id="testimonials_pic" src="https://cutzudev.github.io/treact_example/assets/love-illustration.c759090fa833369ad6ffb6eb19cacb3e.svg" alt="">
+          </div>
+          <div class="testimonials__para">
+            <h1 class="testimonials__header">
+              TESTIMONIALS
+            </h1>
+            <sub>
+              Our Clients Love Us.
+            </sub>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua enim ad minim veniam.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </body>
 </html>
