did footer and tried button

--- a/index.html
+++ b/index.html
@@ -366,6 +366,62 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div id="links" class="row">
+        <div class="link">
+          <h3>MAIN</h3>
+          <a class="footer-redirect">Blog</a>
+          <a class="footer-redirect">FAQs</a>
+          <a class="footer-redirect">Support</a>
+          <a class="footer-redirect">About us</a>
+        </div>
+        <div class="link">
+          <h3>PRODUCT</h3>
+          <a class="footer-redirect">Log in</a>
+          <a class="footer-redirect">Personal</a>
+          <a class="footer-redirect">Business</a>
+          <a class="footer-redirect">Team</a>
+        </div>
+        <div class="link">
+          <h3>PRESS</h3>
+          <a class="footer-redirect">Logos</a>
+          <a class="footer-redirect">Events</a>
+          <a class="footer-redirect">Stories</a>
+          <a class="footer-redirect">Office</a>
+        </div>
+        <div class="link">
+          <h3>TEAM</h3>
+          <a class="footer-redirect">Career</a>
+          <a class="footer-redirect">Founders</a>
+          <a class="footer-redirect">Culture</a>
+          <a class="footer-redirect">Onboarding</a>
+        </div>
+        <div class="link">
+          <h3>LEGAL</h3>
+          <a class="footer-redirect">GDPR</a>
+          <a class="footer-redirect">Privacy Policy</a>
+          <a class="footer-redirect">Terms of Service</a>
+          <a class="footer-redirect">Disclaimer</a>
+        </div>
+      </div>
+
+      <div id="horizontal-line"></div>
+
+
+      <div class="footer__info row">
+        <div>
+          Treact Inc.
+        </div>
+        <div id="copyright-text">
+          <p>© 2018 Treact Inc. All Rights Reserved.</p>
+        </div>
+        <div class="footer-images-container">
+          <div>a</div>
+          <div>b</div>
+          <div>c</div>
+        </div>
+      </div>
+    </footer>
 
   </body>
 </html>
