--- a/index.html
+++ b/index.html
@@ -345,27 +345,7 @@
        </div>
       </div>
     </section>
-    
-    <section>
-      <div class="row">
-        <div class="testimonials__section">
-          <div class="testimonials__img">
-            <img id="testimonials_pic" src="https://cutzudev.github.io/treact_example/assets/love-illustration.c759090fa833369ad6ffb6eb19cacb3e.svg" alt="">
-          </div>
-          <div class="testimonials__para">
-            <h1 class="testimonials__header">
-              TESTIMONIALS
-            </h1>
-            <sub>
-              Our Clients Love Us.
-            </sub>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua enim ad minim veniam.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
+
     <footer>
       <div id="links" class="row">
         <div class="link">
@@ -410,15 +390,16 @@
 
       <div class="footer__info row">
         <div>
-          Treact Inc.
+          <img class="footer__logo" src="https://treact.owaiskhan.me/static/media/logo-light.d9a5d1b5be5ea077b26864fdfc2e96a4.svg" alt="">
+          <h5>Treact Inc.</h5>
         </div>
         <div id="copyright-text">
           <p>© 2018 Treact Inc. All Rights Reserved.</p>
         </div>
         <div class="footer-images-container">
-          <div>a</div>
-          <div>b</div>
-          <div>c</div>
+          <a href="https://facebook.com"><img src="" alt=""></a>
+          <a href="https://twitter.com/"></a>
+          <a href="https://youtube.com/"></a>
         </div>
       </div>
     </footer>
